@@ -108,15 +108,32 @@ dnl Audacious Media Player
 dnl
 
 AC_ARG_ENABLE([audacious],
-              AC_HELP_STRING([--enable-audacious], [enable audacious player support @<:@default=no@:>@]),
+              AC_HELP_STRING([--enable-audacious=[[yes|no|legacy]]], 
+                             [enable audacious player support @<:@default=no@:>@]),
               [want_audacious="$enableval"], [want_audacious=no])
 
 AM_CONDITIONAL(BUILD_AUDACIOUS, test x$want_audacious = xyes)
 if test x$want_audacious = xyes; then
-  PKG_CHECK_MODULES([AUDACIOUS], [audacious >= 0.1])
+      PKG_CHECK_MODULES([AUDACIOUS], [audacious >= 1.4.0 dbus-glib-1 glib-2.0 gobject-2.0])
       CFLAGS="$CFLAGS $AUDACIOUS_CFLAGS"
       LIBS="$LIBS $AUDACIOUS_LIBS"
+      save_CPPFLAGS="$CPPFLAGS"
+      CPPFLAGS="$AUDACIOUS_CFLAGS -I`pkg-config --variable=audacious_include_dir audacious`/audacious"
+      AC_CHECK_HEADERS([audacious/audctrl.h audacious/dbus.h glib.h glib-object.h], 
+                       [], AC_MSG_ERROR([required header(s) not found]))
+      CPPFLAGS="$save_CPPFLAGS"
       AC_DEFINE(AUDACIOUS, 1, [Define for Audacious support])
+else if test x$want_audacious = xlegacy; then
+      PKG_CHECK_MODULES([AUDACIOUS], [audacious < 1.4.0 glib-2.0])
+      CFLAGS="$CFLAGS $AUDACIOUS_CFLAGS"
+      LIBS="$LIBS $AUDACIOUS_LIBS"
+      save_CPPFLAGS="$CPPFLAGS"
+      CPPFLAGS="$AUDACIOUS_CFLAGS -I`pkg-config --variable=audacious_include_dir audacious`/audacious"
+      AC_CHECK_HEADERS([audacious/beepctrl.h glib.h], [], AC_MSG_ERROR([required  header(s) not found]))
+      CPPFLAGS="$save_CPPFLAGS"
+      AC_DEFINE(AUDACIOUS, 1, [Define for Audacious support])
+      AC_DEFINE(AUDACIOUS_LEGACY, 1, [Define for Audacious Legacy support])
+      fi
 fi
 
 
